--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             <div class="subheading mb-3">Secondary</div>
                             <p>Percentange: 86%</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2012 - 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2010 - 2011</span></div>
                     </div>
                     
                 </div>
@@ -269,6 +269,12 @@
             </section>
         </div>
         
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
 
