--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <p>In an abstract key thing learnt at this time was, you should always have believe in your team.
                                <br>Financial issues lead me to leave my own startup.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Oct 2019 - Jan 2020</span></div>
                     </div>
                     <!-- OYO -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
