--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Gurgaon · Haryana · India ·
-                        <a href="mailto:name@email.com">LMSharma4011@email.com</a>
+                        <a href="mailto:name@email.com">LMSharma4011@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Startup Enthusiast | Problem Solver | Data Analyst | Programmer | Designer <br><br>
                        Always a learner who follows 
