social link updated

--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
                        <a href="https://en.wikipedia.org/wiki/Learning-by-doing">Learning-by-doing</a> concept.
                        Mixing concepts as chemical and making something new is what I love.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="linkedin.com/in/LMSharma"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="github.com/LMSharma"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/lmsharma"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/LMSharma/"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://stackoverflow.com/users/6208860/lmsharma"><i class="fab fa-stack-overflow"></i></a>
+                        <a class="social-icon" href="https://www.hackerrank.com/LMSharma><i class="fab fa-hackerrank"></i></a>
                         
                     </div>
                 </div>
