--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/lmsharma"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/LMSharma/"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://stackoverflow.com/users/6208860/lmsharma"><i class="fab fa-stack-overflow"></i></a>
-                        <a class="social-icon" href="https://www.hackerrank.com/LMSharma>"><i class="fab fa-hackerrank"></i></a>
+                        <a class="social-icon" href="https://www.hackerrank.com/LMSharma"><i class="fab fa-hackerrank"></i></a>
                     </div>
                 </div>
             </section>
