--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     <!-- Zetwerk -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Team Lead</h3>
-                            <div class="subheading mb-3">Zetwerk : Business Analyst</div>
+                            <h3 class="mb-0">Business Analyst</h3>
+                            <div class="subheading mb-3">Zetwerk : Banglore</div>
                             <p> Currently working as Business Analyst in the Operational Excellence Team. 
                             </p>
                         </div>
