--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <p> Currently working as Business Analyst in the Operational Excellence Team. 
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Feb 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Feb 2021 - Jun 2022</span></div>
                     </div>
                     
                     
