--- a/index.html
+++ b/index.html
@@ -93,6 +93,25 @@
                             <div class="subheading mb-3">Zetwerk : Banglore</div>
                             <p> Worked as Business Analyst in the Operational Excellence Team. 
                             </p>
+                            <ul>
+                              <li>
+                                CCC Measurement : In depth implementation and analysis of DPO, DSO and
+DIO offline and further taking it to automated system
+This helps in reducing the CCC, taking suitable action on Procurement, In-
+ventory liquidation, Interest charges on supply deals.
+                              </li>
+                              <li>
+                                Centralized Ticket system for all OMS activities on google sheet and taking it
+further on freshdesk
+                              </li>
+                              <li>
+                                Cash Margin Dashboards and analysis at different stages of the project, used
+to control the margin leakages across the org.
+                              </li>
+                                <li>
+                                    ERP implementation support on analytical side.
+                                </li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Feb 2021 - Jun 2022</span></div>
                     </div>
