--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Gurgaon · Haryana · India ·
-                        <a href="mailto:name@email.com">LMSharma4011@gmail.com</a>
+                        <a href="mailto:LMSharma4011@gmail.com">LMSharma4011@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Startup Enthusiast | Problem Solver | Data Analyst | Programmer | Designer <br><br>
                        Always a learner who follows 
@@ -80,7 +80,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Business Analyst</h3>
                             <div class="subheading mb-3">OYO : Gurgaon</div>
-                            <p> Currently working as Business Analyst in the OVH Team. 
+                            <p> Currently working as Business Analyst in the OVH Supply Team. 
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jun 2022 - Present</span></div>
@@ -90,7 +90,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Business Analyst</h3>
-                            <div class="subheading mb-3">Zetwerk : Banglore</div>
+                            <div class="subheading mb-3">Zetwerk : Bangalore</div>
                             <p> Worked as Business Analyst in the Operational Excellence Team. 
                             </p>
                             <ul>
