--- a/index.html
+++ b/index.html
@@ -75,16 +75,39 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+
+                    <!-- SMS-Group -->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Senior Engineer</h3>
+                            <div class="subheading mb-3">SMS-Group : Gurgaon</div>
+                            <p> Currently working as Senior Engineer in Supply Chain Team. Handling the process automation and digitalization.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Dec 2023 - Present</span></div>
+                    </div>
+
                     
                     <!-- OVH -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Business Analyst</h3>
                             <div class="subheading mb-3">OYO : Gurgaon</div>
-                            <p> Currently working as Business Analyst in the OVH Supply Team. 
+                            <p> Worked as Business Analyst in Supply Chain Team.  
                             </p>
+                            <ul>
+                              <li>
+                                Property Analysis on : Signing, Re-assigning and Churns, GBV Insights.
+                              </li>
+                              <li>
+                                Setting up KPI's for Dancenter Business from scratch. Understanding Old AS400 ERP System and syncing & fixing the data with OYO environment.
+                              </li>
+                                <li>
+                                BDM achievement and incentives tracking.
+                                </li>
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Jun 2022 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jun 2022 - Dec 2023</span></div>
                     </div>
                     
                     <!-- Zetwerk -->
