--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             </p>
                             <ul>
                               <li>
-                                Property Analysis on : Signing, Re-assigning and Churns, GBV Insights.
+                                Property Analysis on : Signing, Re-signing and Churns, GBV Insights.
                               </li>
                               <li>
                                 Setting up KPI's for Dancenter Business from scratch. Understanding Old AS400 ERP System and syncing & fixing the data with OYO environment.
